@@ -4424,6 +4424,101 @@
         "palette": "keep"
     },
     {
+        "path": "track/flume/25-60-down-nesw.png",
+        "x_offset": -26,
+        "y_offset": -39,
+        "palette" : "keep"
+    },
+    {
+        "path": "track/flume/25-60-down-nwse.png",
+        "x_offset": -28,
+        "y_offset": -39,
+		"palette" : "keep"
+    },
+    {
+        "path": "track/flume/25-60-down-nesw-back-water.png",
+        "y_offset": -23,
+		"palette" : "keep"
+    },
+    {
+        "path": "track/flume/25-60-down-nesw-back.png",
+        "x_offset": -26,
+        "y_offset": -12,
+		"palette" : "keep"
+    },
+    {
+        "path": "track/flume/25-60-down-nwse-back-water.png",
+        "x_offset": -25,
+        "y_offset": -22,
+		"palette" : "keep"
+    },
+    {
+        "path": "track/flume/25-60-down-nwse-back.png",
+        "x_offset": -10,
+        "y_offset": -12,
+		"palette" : "keep"
+    },
+    {
+        "path": "track/flume/60-down-nesw.png",
+        "x_offset": -27,
+        "y_offset": -71,
+        "palette" : "keep"
+    },
+    {
+        "path": "track/flume/60-down-nwse.png",
+        "x_offset": -28,
+        "y_offset": -70,
+        "palette" : "keep"
+    },
+    {
+        "path": "track/flume/60-down-nesw-back.png",
+        "x_offset": -26,
+        "y_offset": -53,
+        "palette" : "keep"
+    },
+    {
+        "path": "track/flume/60-down-nwse-back.png",
+        "x_offset": -27,
+        "y_offset": -55,
+		"palette" : "keep"
+    },
+    {
+        "path": "track/flume/60-25-down-nesw.png",
+        "x_offset": -27,
+        "y_offset": -39,
+        "palette" : "keep"
+    },
+    {
+        "path": "track/flume/60-25-down-nwse.png",
+        "x_offset": -28,
+        "y_offset": -39,
+		"palette" : "keep" 
+    },
+    {
+        "path": "track/flume/60-25-down-nesw-back-water.png",
+        "x_offset": -20,
+        "y_offset": -6,
+        "palette" : "keep"
+    },
+    {
+        "path": "track/flume/60-25-down-nesw-back.png",
+        "x_offset": -27,
+        "y_offset": -22,
+        "palette" : "keep"
+    },
+    {
+        "path": "track/flume/60-25-down-nwse-back-water.png",
+        "x_offset": 2,
+        "y_offset": -6,
+		"palette" : "keep"
+    },
+    {
+        "path": "track/flume/60-25-down-nwse-back.png",
+        "x_offset": -26,
+        "y_offset": -22,
+		"palette" : "keep"
+    },
+    {
         "path": "support/flat_to_steep_1_1.png",
         "x_offset": -32,
         "y_offset": -5
