@@ -1190,9 +1190,26 @@ enum
     SPR_G2_LIM_LAUNCHED_TRACK_SMALL_FLAT_TO_STEEP = SPR_G2_LIM_LAUNCHED_TRACK_LARGE_ZERO_G_ROLL + 40,
     SPR_G2_LIM_LAUNCHED_TRACK_END = SPR_G2_LIM_LAUNCHED_TRACK_SMALL_FLAT_TO_STEEP + 20,
 
+    SPR_G2_FLUME_25_60_NE_SW = SPR_G2_LIM_LAUNCHED_TRACK_END,
+    SPR_G2_FLUME_25_60_NW_SE,
+    SPR_G2_FLUME_25_60_NE_SW_BACK_WATER,
+    SPR_G2_FLUME_25_60_NE_SW_BACK,
+    SPR_G2_FLUME_25_60_NW_SE_BACK_WATER,
+    SPR_G2_FLUME_25_60_NW_SE_BACK,
+    SPR_G2_FLUME_60_NE_SW,
+    SPR_G2_FLUME_60_NW_SE,
+    SPR_G2_FLUME_60_NE_SW_BACK,
+    SPR_G2_FLUME_60_NW_SE_BACK,
+    SPR_G2_FLUME_60_25_NE_SW,
+    SPR_G2_FLUME_60_25_NW_SE,
+    SPR_G2_FLUME_60_25_NE_SW_BACK_WATER,
+    SPR_G2_FLUME_60_25_NE_SW_BACK,
+    SPR_G2_FLUME_60_25_NW_SE_BACK_WATER,
+    SPR_G2_FLUME_60_25_NW_SE_BACK,
+
     // G2 Supports
 
-    SPR_G2_SUPPORT_BEGIN = SPR_G2_LIM_LAUNCHED_TRACK_END,
+    SPR_G2_SUPPORT_BEGIN,
     SPR_G2_SUPPORT_END = SPR_G2_SUPPORT_BEGIN + 32,
 
     // G2 New track types
