@@ -1,6 +1,7 @@
 0.4.3 (in development)
 ------------------------------------------------------------------------
 - Feature: [#17782] The Flying Coaster now has access to boosters and can draw outside loops.
+- Feature: [#17997] The Log Flume can now draw steep pieces down (if vehicle allows it).
 - Feature: [#18312, objects#220, OpenSFX#13] New sound effects for the Hybrid and Single Rail roller coasters.
 - Feature: [objects#173] Add alpine coaster vehicle.
 - Feature: [objects#221] Add two extra jungle walls.
